; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_reread_byte.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_reread_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i64, i32 }

@errno = common dso_local global i64 0, align 8
@UNEXPECTED_ERROR_CODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"reread\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*)* @reread_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reread_byte(%struct.file* %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %2, align 8
  %4 = load %struct.file*, %struct.file** %2, align 8
  %5 = getelementptr inbounds %struct.file, %struct.file* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  %7 = call i32 @getc(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i64, i64* @errno, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i64, i64* @errno, align 8
  %12 = load %struct.file*, %struct.file** %2, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  br label %14

14:                                               ; preds = %10, %1
  %15 = load i32, i32* %3, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  %19 = icmp sgt i32 %18, 255
  br i1 %19, label %20, label %24

20:                                               ; preds = %17, %14
  %21 = load %struct.file*, %struct.file** %2, align 8
  %22 = load i32, i32* @UNEXPECTED_ERROR_CODE, align 4
  %23 = call i32 @stop(%struct.file* %21, i32 %22, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %20, %17
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @getc(i32) #1

declare dso_local i32 @stop(%struct.file*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
